5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1756_1185.log
== TEST (2019-05-27 15:29:07) 
-- CODE:
from numpy
vetor = array(eval(input("")))
i = 0
while(i < vetor):
	if (vetor[i] < 99):
	i = i + 1
print(i)
-- ERROR:
File "XXXX", line 1
    from numpy
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:29:14) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
while(i < vetor):
	if (vetor[i] < 99):
	i = i + 1
print(i)
-- ERROR:
File "XXXX", line 6
    i = i + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:29:33) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
while(i < vetor):
	if (vetor[i] < 99):
	   i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:31:14) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
o = 0
while(i < vetor):
	if (vetor[i] > 99):
	   o = o + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:32:51) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
o = 0
while (i < vetor):
	if(vetor[i] > 99):
	   o = o + 1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:33:52) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
o = 0
while (i < size(vetor)):
	if(vetor[i] > 99):
	   o = o + 1	
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:34:21) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
o = 0
while (i < size(vetor)):
	if(vetor[i] > 99):
	   o = o + 1	
	i = i + 1
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:15:14) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
o = 0
while (i < size(vetor)):
	if(vetor[i] > 99):
	   o = o + 1	
	i = i + 1
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:17:14) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
o = 0
while (i < size(vetor)):
	if(vetor[i] > 99):
	   
		o = o + 1	
	i = i + 1
print(o)
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:17:57) 
-- CODE:
from numpy import*
vetor = array(eval(input("")))
i = 0
o = 0
while (i < size(vetor)):
	if(vetor[i] > 99):
	   
		o = o + 1	
	i = i + 1
print(o)
print(vetor[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:33:00) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = o
c = 0
t = []
while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
	i = i + 1
	c = c + 1
	p = p + 1
print(t)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:33:57) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
	i = i + 1
	c = c + 1
	o = o + 1
print(t)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:34:33) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
	i = i + 1
	c = c + 1
	o = o + 1
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:34:53) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
	i = i + 1
	c = c + 1
	o = o + 1
print(t)
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:38:00) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
		
	i = i + 1
	c = c + 1
	o = o + 1
print(p[99:])
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:38:10) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
		
	i = i + 1
	c = c + 1
	o = o + 1
print(p[d:])
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:38:27) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
		
	i = i + 1
	c = c + 1
	o = o + 1
print(v[d:])
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:45:20) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []

while (c < size(v)):
	arange(v)
	if (v[i] > d):
		t.append(v[i])
		
	i = i + 1
	c = c + 1
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:45:39) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []

while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
		
	i = i + 1
	c = c + 1
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:52:25) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
while (c < size(v)):
	if(v[i] >= 99):
		o = o + 1
	i = i + 1
print(i)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:52:59) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0[]
while (c < size(v)):
	if(v[i] >= 99):
		o = o + 1
	i = i + 1
print(i)


		
-- ERROR:
File "XXXX", line 6
    c = 0[]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:53:08) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
while (c < size(v)):
	if(v[i] >= 99):
		o = o + 1
	i = i + 1
print(i)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:53:32) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
while (c < size(v)):
	if(v[i] >= 99):
		o = o + 1
	i = i + 1
print(i)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:53:43) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
while (c < size(v)):
	if(v[i] >= 99):
		o = o + 1
	i = i + 1
print(i)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:54:23) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
while (c < size(v)):
	if(v[i] >= 99):
		o = o + 1
	i = i + 1
	c = c + 1
print(i)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:09:12) 
-- CODE:
from numpy import*
v = array(eval(input("nivel de glicose: ")))
d = 99
i = 0
o = 0
c = 0
t = []
 

while (c < size(v)):
	if (v[i] > d):
		t.append(v[i])
		
	i = i + 1
	c = c + 1
print(size(t))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
